fix pom xml