@@ -1,3 +1,124 @@
+// package com.dentist.booking.config;
+
+// import com.dentist.booking.security.JwtAuthenticationFilter;
+// import com.fasterxml.jackson.databind.ObjectMapper;
+// import jakarta.servlet.http.HttpServletResponse;
+// import lombok.RequiredArgsConstructor;
+// import org.springframework.context.annotation.Bean;
+// import org.springframework.context.annotation.Configuration;
+// import org.springframework.http.HttpMethod;
+// import org.springframework.http.MediaType;
+// import org.springframework.security.authentication.AuthenticationManager;
+// import org.springframework.security.authentication.AuthenticationProvider;
+// import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+// import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+// import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+// import org.springframework.security.config.http.SessionCreationPolicy;
+// import org.springframework.security.core.userdetails.UserDetailsService;
+// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+// import org.springframework.security.crypto.password.PasswordEncoder;
+// import org.springframework.security.web.SecurityFilterChain;
+// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+// import org.springframework.web.cors.CorsConfiguration;
+// import org.springframework.web.cors.CorsConfigurationSource;
+// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+// import java.util.Arrays;
+// import java.util.HashMap;
+// import java.util.List;
+// import java.util.Map;
+
+// @Configuration
+// @EnableWebSecurity
+// @EnableMethodSecurity
+// @RequiredArgsConstructor
+// public class SecurityConfig {
+
+//     private final JwtAuthenticationFilter jwtAuthFilter;
+//     private final UserDetailsService userDetailsService;
+//     private final ObjectMapper objectMapper = new ObjectMapper();
+
+//     @Bean
+//     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+//         http
+//                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//                 .csrf(AbstractHttpConfigurer::disable)
+//                 .authorizeHttpRequests(auth -> auth
+//                         .requestMatchers("/api/auth/**").permitAll()
+//                         .requestMatchers(HttpMethod.GET, "/api/dentists").permitAll()
+//                         .requestMatchers(HttpMethod.GET, "/api/dentists/**").permitAll()
+//                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
+//                         .anyRequest().authenticated()
+//                 )
+//                 .sessionManagement(session -> session
+//                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+//                 )
+//                 .authenticationProvider(authenticationProvider())
+//                 .exceptionHandling(exception -> exception
+//                         .authenticationEntryPoint((request, response, authException) -> {
+//                             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+//                             response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+//                             Map<String, Object> body = new HashMap<>();
+//                             body.put("success", false);
+//                             body.put("message", "Unauthorized: " + authException.getMessage());
+//                             response.getWriter().write(objectMapper.writeValueAsString(body));
+//                         })
+//                         .accessDeniedHandler((request, response, accessDeniedException) -> {
+//                             response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+//                             response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+//                             Map<String, Object> body = new HashMap<>();
+//                             body.put("success", false);
+//                             body.put("message", "Access denied: " + accessDeniedException.getMessage());
+//                             response.getWriter().write(objectMapper.writeValueAsString(body));
+//                         })
+//                 )
+//                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+
+//         return http.build();
+//     }
+
+//     @Bean
+//     public CorsConfigurationSource corsConfigurationSource() {
+//         CorsConfiguration configuration = new CorsConfiguration();
+//         configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
+//         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//         configuration.setAllowedHeaders(List.of("*"));
+//         configuration.setAllowCredentials(true);
+        
+//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//         source.registerCorsConfiguration("/**", configuration);
+//         return source;
+//     }
+
+//     @Bean
+//     public AuthenticationProvider authenticationProvider() {
+//         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+//         authProvider.setUserDetailsService(userDetailsService);
+//         authProvider.setPasswordEncoder(passwordEncoder());
+//         return authProvider;
+//     }
+
+//     @Bean
+//     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+//         return config.getAuthenticationManager();
+//     }
+
+//     @Bean
+//     public PasswordEncoder passwordEncoder() {
+//         return new BCryptPasswordEncoder();
+//     }
+// }
+
+
+
+
+
+
+
+
 package com.dentist.booking.config;
 
 import com.dentist.booking.security.JwtAuthenticationFilter;
@@ -26,10 +147,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Configuration
 @EnableWebSecurity
@@ -44,55 +162,84 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                // CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // Disable CSRF (JWT based)
                 .csrf(AbstractHttpConfigurer::disable)
+
+                // Authorization rules
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/test").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/dentists").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/dentists/**").permitAll()
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
                         .anyRequest().authenticated()
                 )
+
+                // Stateless session (JWT)
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
+
+                // Auth provider
                 .authenticationProvider(authenticationProvider())
+
+                // Exception handling
                 .exceptionHandling(exception -> exception
                         .authenticationEntryPoint((request, response, authException) -> {
                             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
                             response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+
                             Map<String, Object> body = new HashMap<>();
                             body.put("success", false);
                             body.put("message", "Unauthorized: " + authException.getMessage());
+
                             response.getWriter().write(objectMapper.writeValueAsString(body));
                         })
                         .accessDeniedHandler((request, response, accessDeniedException) -> {
                             response.setStatus(HttpServletResponse.SC_FORBIDDEN);
                             response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+
                             Map<String, Object> body = new HashMap<>();
                             body.put("success", false);
                             body.put("message", "Access denied: " + accessDeniedException.getMessage());
+
                             response.getWriter().write(objectMapper.writeValueAsString(body));
                         })
                 )
+
+                // JWT filter
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
+    // ✅ CORS CONFIG (IMPORTANT FIX)
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "http://localhost:3000",
+                "https://your-frontend.vercel.app" // 🔥 replace this
+        ));
+
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        ));
+
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
+    // Auth provider
     @Bean
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
@@ -101,11 +248,13 @@ public class SecurityConfig {
         return authProvider;
     }
 
+    // Auth manager
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
+    // Password encoder
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
